--- a/akp/templates/blog-post.html
+++ b/akp/templates/blog-post.html
@@ -5,7 +5,8 @@
 {% block body %}
 <div class="wrapper">
 <nav>
-    <a href="{{ url_for('index') }}">Home</a>
+    <a href="{{ url_for('index') }}">Home</a> |
+    <a href="{{ url_for('atom_feed') }}">Feed</a>
 </nav>
 <article>
 <h1>
