--- a/akp/templates/base.html
+++ b/akp/templates/base.html
@@ -3,13 +3,14 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    {% assets "site_css" %}
+    {% assets "site_css" -%}
     <link rel="stylesheet" rel="stylesheet" href="{{ ASSET_URL }}">
-    {% endassets %}
+    {%- endassets %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script defer data-domain="arunkprasad.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
-    {% block body %}
-    {% endblock %}
+    {%- block body %}
+    {% endblock -%}
   </body>
 </html>
