--- a/akp/templates/include/nav.html
+++ b/akp/templates/include/nav.html
@@ -1,5 +1,6 @@
 <nav>
-    <a href="{{ url_for('index') }}">Home</a> |
+    <a href="{{ url_for('about') }}">About</a> |
+    <a href="{{ url_for('index') }}">Log</a> |
     <a href="{{ url_for('pages') }}">Pages</a> |
     <a href="{{ url_for('atom_feed') }}">Feed</a>
 </nav>
