--- a/akp/templates/include/nav.html
+++ b/akp/templates/include/nav.html
@@ -2,6 +2,7 @@
     <a href="{{ url_for('about') }}">About</a> |
     <a href="{{ url_for('index') }}">Log</a> |
     <a href="{{ url_for('pages') }}">Pages</a> |
+    <a href="{{ url_for('page', slug='subscribe') }}">Subscribe</a> |
     <a href="{{ url_for('atom_feed') }}">Feed</a>
 </nav>
 
