--- a/akp/templates/about.html
+++ b/akp/templates/about.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% set linkedin = "https://www.linkedin.com/in/arun-k-prasad" %}
+
 {% block title %}Arun Prasad{% endblock %}
 
 {% block body %}
@@ -8,7 +10,16 @@
 <article>
 <h1>About</h1>
 
-<p>I'm a machine learning engineer based in San Francisco.</p>
+<p>I'm a machine learning engineer in the Bay Area with previous experience
+with query understanding (Google Search) and content/user understanding and
+recommendations (Pinterest). In my personal projects I'm a full-stack
+generalist.</p>
+
+<p>(For details, see my <a href="{{ linkedin }}">LinkedIn</a>.)</p>
+
+<p>I am currently pursuing my own projects while hunting for the right role.
+Here are the problems I find </p>
+
 </article>
 </div>
 {% endblock %}
