--- a/akp/static/css/style.css
+++ b/akp/static/css/style.css
@@ -19,8 +19,11 @@ h1, h2 {
     font-family: Charter, Georgia, serif;
     line-height: 3rem;
 }
-h2 {
+h1 {
     font-size: 1.25rem;
+}
+header h1 {
+    font-size: 1.5rem;
 }
 p, li {
     line-height: 1.4rem;
