--- a/akp/static/css/style.css
+++ b/akp/static/css/style.css
@@ -69,7 +69,7 @@ pre, code {
 .admonition p:nth-child(2) { margin-top: 0; }
 .admonition p:last-child { margin-bottom: 0; }
 .note { background: #fff4ca; }
-.thanks {
+.thanks, .endnotes {
     padding: 0;
     font-size: 0.85em;
     color: #999;
